<resources>
    <string name="app_name">MediaFacer</string>
    <string name="mediafacer_examples">MediaFacer Examples</string>
    <string name="picture_get">Picture Get</string>
    <string name="video_get">Video Get</string>
    <string name="audio_get">Audio Get</string>
    <string name="picture_folder">Folder :</string>
    <string name="filename">Filename</string>
    <string name="fullpath">Fullpath</string>
    <string name="size">Size</string>
    <string name="date_added">Date Added</string>
    <string name="last_modified">Last Modified</string>
    <string name="all_audio">All</string>
    <string name="albums">Album</string>
    <string name="artists">Artist</string>
    <string name="folders">Folder</string>
    <string name="Genres">Genre</string>
    <string name="title">Title</string>
    <string name="artist">artist</string>
    <string name="counter">counter</string>
    <string name="duration">duration</string>
</resources>
