<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/ic_mediafacer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/mediafacer_examples"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/pictureBut"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:text="@string/picture_get"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/audioBut"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:text="@string/audio_get"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/videoBut"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/video_get"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>


    </LinearLayout>

</RelativeLayout>