<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_purple">

    <ImageView
        android:id="@+id/pic"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        app:srcCompat="@drawable/ic_pictures" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pic"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginTop="3dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/filename"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/fullpath"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/size"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/date_added"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/last_modified"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/filename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/filename" />

            <TextView
                android:id="@+id/fullpath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/fullpath" />

            <TextView
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/size" />

            <TextView
                android:id="@+id/date_added"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/date_added" />

            <TextView
                android:id="@+id/last_modified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/last_modified" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>